--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{
 
 /* Logo */
 .logo{
-  font-size:64px;
+  font-size:56px;
   font-weight:bold;
   margin-bottom:20px;
 }
@@ -48,12 +48,12 @@ body{
 .logo span.y{color:#fbbc05}
 .logo span.g{color:#34a853}
 
-/* Search */
+/* Inputs */
 input{
   width:90%;
   max-width:520px;
-  padding:14px 20px;
-  font-size:18px;
+  padding:12px 18px;
+  font-size:16px;
   border-radius:24px;
   border:1px solid #dfe1e5;
 }
@@ -61,23 +61,40 @@ input{
 /* Results */
 #results{
   display:none;
-  padding:20px;
+  padding:12px;
   max-width:1100px;
   margin:auto;
+}
+
+/* Top bar */
+.topbar{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  margin-bottom:12px;
+}
+.back{
+  font-size:22px;
+  cursor:pointer;
+}
+.topbar input{
+  flex:1;
+  max-width:none;
 }
 
 /* Tabs */
 .tabs{
   display:flex;
-  gap:18px;
+  gap:16px;
   border-bottom:1px solid #ddd;
-  margin-bottom:20px;
-  flex-wrap:wrap;
+  margin-bottom:14px;
+  overflow-x:auto;
 }
 .tab{
-  padding:8px 0;
+  padding:6px 0;
   cursor:pointer;
   color:#5f6368;
+  white-space:nowrap;
 }
 .tab.active{
   color:#1a73e8;
@@ -85,23 +102,23 @@ input{
 }
 
 /* Results layout */
-.result-item{margin:18px 0;}
-.result-title{font-size:20px;color:#1a73e8;cursor:pointer;}
-.result-url{font-size:14px;color:#188038;}
+.result-item{margin:14px 0;}
+.result-title{font-size:18px;color:#1a73e8;cursor:pointer;}
+.result-url{font-size:13px;color:#188038;}
 
 /* Grid */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(150px,1fr));
-  gap:12px;
+  grid-template-columns:repeat(auto-fill,minmax(140px,1fr));
+  gap:10px;
 }
 .grid img{
   width:100%;
   border-radius:8px;
 }
 .video-title{
-  font-size:14px;
-  margin-top:6px;
+  font-size:13px;
+  margin-top:4px;
 }
 </style>
 
@@ -115,6 +132,11 @@ input{
 </div>
 
 <div id="results">
+  <div class="topbar">
+    <div class="back" onclick="goHome()">⬅</div>
+    <input id="topSearch" placeholder="Search again" onkeydown="topEnter(event)">
+  </div>
+
   <div class="tabs">
     <div class="tab active" onclick="setTab('all')">All</div>
     <div class="tab" onclick="setTab('images')">Images</div>
@@ -122,23 +144,40 @@ input{
     <div class="tab" onclick="setTab('news')">News</div>
     <div class="tab" onclick="setTab('flights')">Flights</div>
   </div>
+
   <div id="content"></div>
 </div>
 
 <script>
 let currentTab="all";
-
 const UNSPLASH="Wsi2QpvPXyiNLfGRbZX8MwbDg7oqCQQFtibqIu02nWA";
 const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
 
 function homeEnter(e){
   if(e.key==="Enter"){
-    const q=e.target.value.trim();
-    if(q){
-      history.pushState(null,"",`?q=${encodeURIComponent(q)}`);
-      showResults(q);
-    }
+    startSearch(e.target.value);
   }
+}
+function topEnter(e){
+  if(e.key==="Enter"){
+    startSearch(e.target.value);
+  }
+}
+
+function startSearch(q){
+  q=q.trim();
+  if(!q)return;
+  history.pushState(null,"",`?q=${encodeURIComponent(q)}`);
+  document.getElementById("home").style.display="none";
+  document.getElementById("results").style.display="block";
+  document.getElementById("topSearch").value=q;
+  renderTab(q);
+}
+
+function goHome(){
+  history.pushState(null,"","./");
+  document.getElementById("results").style.display="none";
+  document.getElementById("home").style.display="flex";
 }
 
 function setTab(tab){
@@ -147,12 +186,6 @@ function setTab(tab){
   event.target.classList.add("active");
   const q=new URLSearchParams(location.search).get("q");
   if(q)renderTab(q);
-}
-
-function showResults(q){
-  document.getElementById("home").style.display="none";
-  document.getElementById("results").style.display="block";
-  renderTab(q);
 }
 
 function renderTab(q){
@@ -222,10 +255,10 @@ function renderTab(q){
   }
 }
 
-/* Auto-load from ?q= */
+/* Load from ?q= */
 window.onload=()=>{
   const q=new URLSearchParams(location.search).get("q");
-  if(q)showResults(q);
+  if(q)startSearch(q);
 };
 </script>
 
