--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>Searchmas</title>
   <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <style>
     * { box-sizing: border-box; font-family: Arial, sans-serif; }
 
@@ -24,10 +23,12 @@
       }
     }
 
-    .container {
-      text-align: center;
+    .home, .results-page {
       padding: 40px 10px;
+      text-align: center;
     }
+
+    .hidden { display: none; }
 
     .logo {
       font-size: 52px;
@@ -70,11 +71,33 @@
       cursor: pointer;
     }
 
-    #results {
-      max-width: 720px;
-      margin: 30px auto;
+    .topbar {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      margin-bottom: 15px;
+      flex-wrap: wrap;
+    }
+
+    .topbar input {
+      flex: 1;
+      padding: 10px;
+      border-radius: 20px;
+      border: 1px solid #ccc;
+    }
+
+    .topbar button {
+      padding: 10px 14px;
+      border: none;
+      border-radius: 18px;
+      cursor: pointer;
+      background: #eee;
+    }
+
+    .results {
+      max-width: 900px;
+      margin: auto;
       text-align: left;
-      padding: 0 10px;
     }
 
     .result-item {
@@ -92,84 +115,130 @@
       color: #006621;
     }
 
+    .image-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill,minmax(140px,1fr));
+      gap: 10px;
+    }
+
+    .image-grid img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
     @media (max-width: 600px) {
       .logo { font-size: 40px; }
-      .search-box { font-size: 16px; }
     }
   </style>
 </head>
 <body>
 
-<div class="container" id="home">
+<!-- HOME -->
+<div class="home" id="home">
   <div class="logo">
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span><span>m</span><span>a</span><span>s</span>
   </div>
-
-  <input class="search-box" id="searchInput" placeholder="Search the web..." autofocus>
-
+  <input class="search-box" id="homeSearch" placeholder="Search the web...">
   <div class="tabs">
-    <button onclick="setTab('all')">All</button>
-    <button onclick="setTab('images')">Images</button>
-    <button onclick="setTab('videos')">Videos</button>
-    <button onclick="setTab('news')">News</button>
-    <button onclick="setTab('flights')">Flights</button>
+    <button onclick="startSearch('all')">All</button>
+    <button onclick="startSearch('images')">Images</button>
+    <button onclick="startSearch('videos')">Videos</button>
+    <button onclick="startSearch('news')">News</button>
+    <button onclick="startSearch('flights')">Flights</button>
   </div>
 </div>
 
-<div id="results"></div>
+<!-- RESULTS PAGE -->
+<div class="results-page hidden" id="resultsPage">
+  <div class="topbar">
+    <button onclick="goHome()">← Back</button>
+    <input id="resultSearch">
+    <button onclick="rerun()">Search</button>
+  </div>
+  <div class="results" id="results"></div>
+</div>
 
 <script>
 let activeTab = "all";
+const UNSPLASH_KEY = "YOUR_UNSPLASH_KEY";
 
-function setTab(tab) {
+function startSearch(tab) {
+  const q = document.getElementById("homeSearch").value.trim();
+  if (!q) return;
   activeTab = tab;
-  const q = document.getElementById("searchInput").value.trim();
-  if (q) runSearch(q);
+  runSearch(q);
 }
 
 function runSearch(q) {
+  document.getElementById("home").classList.add("hidden");
+  document.getElementById("resultsPage").classList.remove("hidden");
+  document.getElementById("resultSearch").value = q;
+
   const url = new URL(window.location.href);
   url.searchParams.set("q", q);
   window.history.pushState({}, "", url);
 
-  const results = document.getElementById("results");
-  results.innerHTML = "";
+  const res = document.getElementById("results");
+  res.innerHTML = "";
 
-  if (activeTab === "flights") {
-    results.innerHTML = `<div class="result-item">
-      <div class="result-title" onclick="window.open('https://www.flightradar24.com','_blank')">Open FlightRadar24</div>
-      <div class="result-url">flightradar24.com</div>
-    </div>`;
+  if (activeTab === "images") {
+    fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=${UNSPLASH_KEY}`)
+      .then(r => r.json())
+      .then(data => {
+        res.innerHTML = `<div class="image-grid">
+          ${data.results.map(img => `<img src="${img.urls.small}" alt="">`).join("")}
+        </div>`;
+      });
     return;
   }
 
-  const searchUrl = {
+  if (activeTab === "flights") {
+    res.innerHTML = `
+      <div class="result-item">
+        <div class="result-title" onclick="window.open('https://www.flightradar24.com','_blank')">Open FlightRadar24</div>
+        <div class="result-url">flightradar24.com</div>
+      </div>`;
+    return;
+  }
+
+  const map = {
     all: "https://www.google.com/search?q=",
-    images: "https://www.google.com/search?tbm=isch&q=",
     videos: "https://www.google.com/search?tbm=vid&q=",
     news: "https://news.google.com/search?q="
-  }[activeTab];
+  };
 
-  const final = searchUrl + encodeURIComponent(q);
+  const link = map[activeTab] + encodeURIComponent(q);
 
-  results.innerHTML = `
+  res.innerHTML = `
     <div class="result-item">
-      <div class="result-title" onclick="window.open('${final}','_blank')">
-        Search "${q}" on ${activeTab.charAt(0).toUpperCase()+activeTab.slice(1)}
+      <div class="result-title" onclick="window.open('${link}','_blank')">
+        Search "${q}" on ${activeTab.toUpperCase()}
       </div>
-      <div class="result-url">${final}</div>
-    </div>
-  `;
+      <div class="result-url">${link}</div>
+    </div>`;
 }
 
-document.getElementById("searchInput").addEventListener("keydown", e => {
-  if (e.key === "Enter") runSearch(e.target.value.trim());
+function goHome() {
+  document.getElementById("resultsPage").classList.add("hidden");
+  document.getElementById("home").classList.remove("hidden");
+  history.pushState({}, "", location.pathname);
+}
+
+function rerun() {
+  runSearch(document.getElementById("resultSearch").value.trim());
+}
+
+document.getElementById("homeSearch").addEventListener("keydown", e => {
+  if (e.key === "Enter") startSearch("all");
+});
+document.getElementById("resultSearch").addEventListener("keydown", e => {
+  if (e.key === "Enter") rerun();
 });
 
 const qp = new URLSearchParams(window.location.search).get("q");
 if (qp) {
-  document.getElementById("searchInput").value = qp;
-  runSearch(qp);
+  document.getElementById("homeSearch").value = qp;
+  startSearch("all");
 }
 </script>
 
