--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="icon" href="favicon.ico">
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#1a73e8">
-
 <style>
-html,body{margin:0;padding:0;width:100%;height:100%}
-body{
+html,body{
+  margin:0;padding:0;width:100%;height:100%;
   font-family:Arial,sans-serif;
+}
+body{
   background:
     url('Santa.png') left center / 50% 100vh no-repeat,
     url('Santa.png') right center / 50% 100vh no-repeat;
@@ -39,7 +37,7 @@ body{
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
 
-.search-box{max-width:580px;width:100%;padding:0 16px}
+.search-box{width:100%;max-width:580px;padding:0 16px}
 input{
   width:100%;
   padding:14px 20px;
@@ -48,19 +46,36 @@ input{
   border:1px solid #dfe1e5;
 }
 
-#results{display:none;padding:15px;max-width:1100px;margin:auto}
+#results{display:none;max-width:1100px;margin:auto;padding:15px}
 .topbar{display:flex;gap:12px;align-items:center}
 .back{cursor:pointer;font-size:22px}
-.tabs{display:flex;gap:25px;margin:15px 0;border-bottom:1px solid #ddd}
-.tab{cursor:pointer;color:#5f6368}
+
+.tabs{
+  display:flex;gap:25px;margin:15px 0;border-bottom:1px solid #ddd;
+  flex-wrap:wrap;
+}
+.tab{cursor:pointer;color:#5f6368;padding-bottom:8px}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8}
-.engine{display:flex;gap:14px;font-size:22px;margin:18px 0;cursor:pointer}
-.engine img{width:36px;height:36px}
+
+.engine{
+  font-size:22px;
+  margin:18px 0;
+  cursor:pointer;
+}
+
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(160px,1fr));
+  gap:12px;
+}
+.grid img{width:100%;border-radius:8px}
+.video-title{font-size:14px;margin-top:6px}
 </style>
 </head>
 
 <body>
 
+<!-- HOME -->
 <div id="home">
   <div class="logo">
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span><span>m</span><span>a</span><span>s</span>
@@ -70,6 +85,7 @@ input{
   </form>
 </div>
 
+<!-- RESULTS -->
 <div id="results">
   <div class="topbar">
     <div class="back" onclick="goHome()">⬅</div>
@@ -78,10 +94,12 @@ input{
   </div>
 
   <div class="tabs">
+    <div class="tab" data-tab="ai">AI Mode</div>
     <div class="tab active" data-tab="all">All</div>
     <div class="tab" data-tab="images">Images</div>
     <div class="tab" data-tab="videos">Videos</div>
     <div class="tab" data-tab="news">News</div>
+    <div class="tab" data-tab="flights">Flights</div>
   </div>
 
   <div id="content"></div>
@@ -90,8 +108,11 @@ input{
 <script>
 let tab="all";
 
-const qHome=qTop=document.getElementById("qHome");
-const qTopEl=document.getElementById("qTop");
+const UNSPLASH_KEY="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
+const YT_KEY="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+
+const qHome=document.getElementById("qHome");
+const qTop=document.getElementById("qTop");
 const home=document.getElementById("home");
 const results=document.getElementById("results");
 const content=document.getElementById("content");
@@ -105,8 +126,8 @@ function enter(e){
 function showResults(q){
   home.style.display="none";
   results.style.display="block";
-  qTopEl.value=q;
-  search();
+  qTop.value=q;
+  setTab("all");
 }
 
 function goHome(){
@@ -114,42 +135,86 @@ function goHome(){
   home.style.display="flex";
 }
 
-qTopEl.onkeydown=e=>e.key==="Enter"&&search();
+qTop.onkeydown=e=>e.key==="Enter"&&search();
 
 document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    tab=t.dataset.tab;
-    search();
-  };
+  t.onclick=()=>setTab(t.dataset.tab);
 });
 
+function setTab(t){
+  tab=t;
+  document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+  document.querySelector(`.tab[data-tab="${t}"]`).classList.add("active");
+  search();
+}
+
 function search(){
-  const q=qTopEl.value.trim();
+  const q=qTop.value.trim();
   if(!q) return;
   const enc=encodeURIComponent(q);
   content.innerHTML="";
 
+  if(tab==="ai"){
+    location.href="https://gemini.google.com";
+    return;
+  }
+
   if(tab==="all"){
     content.innerHTML=`
-      <div class="engine" onclick="open('https://www.google.com/search?q=${enc}')">
-        <img src="https://www.google.com/favicon.ico"> Google
+      <div class="engine" onclick="open('https://www.google.com/search?q=${enc}')">Google</div>
+      <div class="engine" onclick="open('https://www.bing.com/search?q=${enc}')">Bing</div>
+      <div class="engine" onclick="open('https://duckduckgo.com/?q=${enc}')">DuckDuckGo</div>
+      <div class="engine" onclick="open('https://search.yahoo.com/search?p=${enc}')">Yahoo</div>
+    `;
+  }
+
+  if(tab==="images"){
+    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18&client_id=${UNSPLASH_KEY}`)
+      .then(r=>r.json())
+      .then(d=>{
+        content.innerHTML=`<div class="grid">${
+          d.results.map(i=>`<img src="${i.urls.small}">`).join("")
+        }</div>`;
+      });
+  }
+
+  if(tab==="videos"){
+    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT_KEY}`)
+      .then(r=>r.json())
+      .then(d=>{
+        content.innerHTML=`<div class="grid">${
+          d.items.map(v=>`
+            <div>
+              <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
+                <img src="${v.snippet.thumbnails.medium.url}">
+              </a>
+              <div class="video-title">${v.snippet.title}</div>
+            </div>`).join("")
+        }</div>`;
+      });
+  }
+
+  if(tab==="news"){
+    content.innerHTML=`
+      <div class="engine" onclick="open('https://news.google.com/search?q=${enc}')">Google News</div>
+      <div class="engine" onclick="open('https://www.bing.com/news/search?q=${enc}')">Bing News</div>
+    `;
+  }
+
+  if(tab==="flights"){
+    content.innerHTML=`
+      <div class="engine" onclick="open('https://www.flightradar24.com')">
+        Open Flightradar24
       </div>
-      <div class="engine" onclick="open('https://www.bing.com/search?q=${enc}')">
-        <img src="https://www.bing.com/favicon.ico"> Bing
-      </div>
-      <div class="engine" onclick="open('https://duckduckgo.com/?q=${enc}')">
-        <img src="https://duckduckgo.com/favicon.ico"> DuckDuckGo
-      </div>`;
+    `;
   }
 }
 
-/* 🔒 REDIRECTOR LOGIC (NO INFINITE PAGES) */
+/* ?q= REDIRECTOR (no infinite pages) */
 const p=new URLSearchParams(location.search);
 const incoming=p.get("q");
 if(incoming){
-  history.replaceState(null,"",location.pathname); // remove ?q=
+  history.replaceState(null,"",location.pathname);
   showResults(decodeURIComponent(incoming.replace(/\+/g," ")));
 }
 </script>
