--- a/index.html
+++ b/index.html
@@ -5,18 +5,13 @@
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- PWA + FAVICON -->
+<!-- ICON + PWA -->
 <link rel="icon" href="favicon.ico">
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1a73e8">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Searchmas">
 
 <style>
-html,body{
-  margin:0;padding:0;width:100%;height:100%;
-  font-family:Arial,sans-serif;
-}
+html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif}
 
 body{
   background:
@@ -24,38 +19,22 @@ body{
     url('Santa.png') right center / 50% 100vh no-repeat;
 }
 
+/* HOME */
 #home{
   min-height:100vh;
   display:flex;
   flex-direction:column;
   justify-content:center;
   align-items:center;
-  text-align:center;
 }
-
-.logo{
-  font-size:clamp(48px,10vw,80px);
-  font-weight:bold;
-}
-.logo span:nth-child(1){color:#4285f4}
-.logo span:nth-child(2){color:#ff9800}
-.logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4}
-.logo span:nth-child(5){color:#34a853}
-.logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05}
-.logo span:nth-child(8){color:#4285f4}
-.logo span:nth-child(9){color:#34a853}
-
+.logo{font-size:clamp(48px,10vw,80px);font-weight:bold}
 .search-box{max-width:580px;width:100%;padding:0 16px}
 input{
-  width:100%;
-  padding:14px 20px;
-  font-size:18px;
-  border-radius:24px;
-  border:1px solid #dfe1e5;
+  width:100%;padding:14px 20px;font-size:18px;
+  border-radius:24px;border:1px solid #dfe1e5;
 }
 
+/* RESULTS */
 #results{
   display:none;
   max-width:1100px;
@@ -68,32 +47,35 @@ input{
 .back{cursor:pointer;font-size:22px}
 
 .tabs{
-  display:flex;gap:25px;margin:15px 0;border-bottom:1px solid #ddd;
+  display:flex;gap:22px;margin:15px 0;border-bottom:1px solid #ddd;
   flex-wrap:wrap;
 }
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8}
 
-/* 🔹 RESULT TEXT GREY */
-.engine{
-  font-size:22px;
-  margin:18px 0;
+/* RESULT CARDS */
+.card{
+  background:#fff;
+  border-radius:12px;
+  padding:14px 16px;
+  margin:14px 0;
+  display:flex;
+  align-items:center;
+  gap:14px;
   cursor:pointer;
-  color:#5f6368;
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
 }
+.card img{width:28px;height:28px}
+.card span{font-size:18px;color:#5f6368}
 
-.video-title{
-  font-size:14px;
-  margin-top:6px;
-  color:#5f6368;
-}
-
+/* MEDIA */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(160px,1fr));
   gap:12px;
 }
-.grid img{width:100%;border-radius:8px}
+.grid img{width:100%;border-radius:10px}
+.video-title{font-size:14px;color:#5f6368;margin-top:6px}
 </style>
 </head>
 
@@ -101,11 +83,9 @@ input{
 
 <!-- HOME -->
 <div id="home">
-  <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span><span>m</span><span>a</span><span>s</span>
-  </div>
-  <form class="search-box" onsubmit="enter(event)">
-    <input id="qHome" placeholder="Search or type a URL">
+  <div class="logo">Searchmas</div>
+  <form class="search-box" onsubmit="startSearch(event)">
+    <input id="qHome" placeholder="Search the web">
   </form>
 </div>
 
@@ -113,7 +93,6 @@ input{
 <div id="results">
   <div class="topbar">
     <div class="back" onclick="goHome()">⬅</div>
-    <strong>Searchmas</strong>
     <input id="qTop">
   </div>
 
@@ -130,59 +109,72 @@ input{
 </div>
 
 <script>
+const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
+const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+
 let tab="all";
-
-const UNSPLASH_KEY="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT_KEY="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
+const homeEl=document.getElementById("home");
+const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
 const qTop=document.getElementById("qTop");
-const home=document.getElementById("home");
-const results=document.getElementById("results");
 const content=document.getElementById("content");
 
-function enter(e){
+/* INITIAL LOAD */
+const params=new URLSearchParams(location.search);
+const startQ=params.get("q");
+
+if(startQ && startQ.trim()){
+  showResults(startQ);
+}else{
+  history.replaceState({}, "", location.pathname);
+}
+
+/* HOME SEARCH */
+function startSearch(e){
   e.preventDefault();
-  if(!qHome.value.trim()) return;
-  history.pushState({q:qHome.value},"",`?q=${encodeURIComponent(qHome.value)}`);
-  showResults(qHome.value);
+  const q=qHome.value.trim();
+  if(!q) return;
+  history.pushState({}, "", "?q="+encodeURIComponent(q));
+  showResults(q);
 }
 
-function showResults(q){
-  home.style.display="none";
-  results.style.display="block";
-  qTop.value=q;
-  setTab("all",false);
-}
-
-function goHome(){
-  history.pushState(null,"",location.pathname);
-  results.style.display="none";
-  home.style.display="flex";
-}
-
+/* TOP SEARCH */
 qTop.onkeydown=e=>{
   if(e.key==="Enter"){
-    history.pushState({q:qTop.value},"",`?q=${encodeURIComponent(qTop.value)}`);
+    const q=qTop.value.trim();
+    if(!q) return;
+    history.pushState({}, "", "?q="+encodeURIComponent(q));
     search();
   }
 };
 
-window.onpopstate=()=>{
-  const p=new URLSearchParams(location.search);
-  const q=p.get("q");
-  q ? showResults(q) : goHome();
-};
-
+/* TABS */
 document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>setTab(t.dataset.tab,true);
+  t.onclick=()=>{
+    tab=t.dataset.tab;
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    t.classList.add("active");
+    search();
+  };
 });
 
-function setTab(t,doSearch){
-  tab=t;
-  document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-  document.querySelector(`.tab[data-tab="${t}"]`).classList.add("active");
-  if(doSearch) search();
+function showResults(q){
+  homeEl.style.display="none";
+  resEl.style.display="block";
+  qTop.value=q;
+  search();
+}
+
+function goHome(){
+  history.replaceState({}, "", location.pathname);
+  resEl.style.display="none";
+  homeEl.style.display="flex";
+}
+
+function card(icon,text,url){
+  return `<div class="card" onclick="window.open('${url}','_blank')">
+    <img src="${icon}"><span>${text}</span>
+  </div>`;
 }
 
 function search(){
@@ -191,62 +183,61 @@ function search(){
   const enc=encodeURIComponent(q);
   content.innerHTML="";
 
-  if(tab==="ai"){ location.href="https://gemini.google.com"; return; }
+  if(tab==="ai"){
+    location.href="https://gemini.google.com";
+    return;
+  }
 
   if(tab==="all"){
-    content.innerHTML=`
-      <div class="engine" onclick="open('https://www.google.com/search?q=${enc}')">Google</div>
-      <div class="engine" onclick="open('https://www.bing.com/search?q=${enc}')">Bing</div>
-      <div class="engine" onclick="open('https://duckduckgo.com/?q=${enc}')">DuckDuckGo</div>
-      <div class="engine" onclick="open('https://search.yahoo.com/search?p=${enc}')">Yahoo</div>
-    `;
+    content.innerHTML=
+      card("https://www.google.com/favicon.ico","Google",`https://google.com/search?q=${enc}`)+
+      card("https://www.bing.com/favicon.ico","Bing",`https://bing.com/search?q=${enc}`)+
+      card("https://duckduckgo.com/favicon.ico","DuckDuckGo",`https://duckduckgo.com/?q=${enc}`)+
+      card("https://search.yahoo.com/favicon.ico","Yahoo",`https://search.yahoo.com/search?p=${enc}`);
   }
 
   if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18&client_id=${UNSPLASH_KEY}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${
-          d.results.map(i=>`<img src="${i.urls.small}">`).join("")
-        }</div>`;
-      });
+    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
+      headers:{
+        "Authorization":"Client-ID "+UNSPLASH,
+        "Accept-Version":"v1"
+      }
+    })
+    .then(r=>r.json())
+    .then(d=>{
+      content.innerHTML=`<div class="grid">${
+        d.results.map(i=>`<img src="${i.urls.small}">`).join("")
+      }</div>`;
+    });
   }
 
   if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT_KEY}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${
-          d.items.map(v=>`
-            <div>
-              <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
-                <img src="${v.snippet.thumbnails.medium.url}">
-              </a>
-              <div class="video-title">${v.snippet.title}</div>
-            </div>`).join("")
-        }</div>`;
-      });
+    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
+    .then(r=>r.json())
+    .then(d=>{
+      content.innerHTML=`<div class="grid">${
+        d.items.map(v=>`
+          <div>
+            <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
+              <img src="${v.snippet.thumbnails.medium.url}">
+            </a>
+            <div class="video-title">${v.snippet.title}</div>
+          </div>`).join("")
+      }</div>`;
+    });
   }
 
   if(tab==="news"){
-    content.innerHTML=`
-      <div class="engine" onclick="open('https://news.google.com/search?q=${enc}')">Google News</div>
-      <div class="engine" onclick="open('https://www.bing.com/news/search?q=${enc}')">Bing News</div>
-    `;
+    content.innerHTML=
+      card("https://news.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`)+
+      card("https://www.bing.com/favicon.ico","Bing News",`https://www.bing.com/news/search?q=${enc}`);
   }
 
   if(tab==="flights"){
-    content.innerHTML=`
-      <div class="engine" onclick="open('https://www.flightradar24.com')">
-        Open Flightradar24
-      </div>
-    `;
+    content.innerHTML=
+      card("https://www.flightradar24.com/favicon.ico","Flightradar24","https://www.flightradar24.com");
   }
 }
-
-/* Load from ?q= */
-const initQ=new URLSearchParams(location.search).get("q");
-if(initQ) showResults(initQ);
 </script>
 
 </body>
