--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <meta charset="UTF-8">
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- ICON + PWA -->
 <link rel="icon" href="favicon.ico">
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1a73e8">
 
 <style>
 html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
-
 body{
   background:
     url('Santa.png') left center / 50% 100vh no-repeat,
@@ -20,18 +17,8 @@ body{
 }
 
 /* HOME */
-#home{
-  min-height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-}
-.logo{
-  font-size:clamp(48px,10vw,80px);
-  font-weight:bold;
-  text-align:center;
-}
+#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
+.logo{font-size:clamp(48px,10vw,80px);font-weight:bold;text-align:center;}
 .logo span:nth-child(1){color:#4285f4}
 .logo span:nth-child(2){color:#ff9800}
 .logo span:nth-child(3){color:#fbbc05}
@@ -42,92 +29,30 @@ body{
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
 
-.search-box{
-  max-width:580px;width:100%;
-  padding:0 16px;
-}
-input{
-  width:100%;
-  padding:14px 20px;
-  font-size:18px;
-  border-radius:24px;
-  border:1px solid #dfe1e5;
-}
+.search-box{max-width:580px;width:100%;padding:0 16px;}
+input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
 
 /* RESULTS */
-#results{
-  display:none;
-  max-width:1100px;
-  margin:auto;
-  padding:15px;
-  min-height:100vh;
-}
-.topbar{
-  display:flex;
-  gap:12px;
-  align-items:center;
-}
-.back{cursor:pointer;font-size:22px}
-.tabs{
-  display:flex;
-  gap:22px;
-  margin:15px 0;
-  border-bottom:1px solid #ddd;
-  flex-wrap:wrap;
-}
-.tab{
-  cursor:pointer;
-  color:#5f6368;
-  padding-bottom:8px;
-}
-.tab.active{
-  color:#1a73e8;
-  border-bottom:3px solid #1a73e8;
-}
+#results{display:none;max-width:1100px;margin:auto;padding:15px;min-height:100vh;}
+.topbar{display:flex;gap:12px;align-items:center;}
+.back{cursor:pointer;font-size:22px;}
+.tabs{display:flex;gap:22px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
+.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
+.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
 
-/* FLOATING WHITE CARDS FOR ALL RESULTS */
-.card{
-  background:#fff;
-  border-radius:12px;
-  padding:14px 16px;
-  margin:14px 0;
-  display:flex;
-  align-items:center;
-  gap:14px;
-  cursor:pointer;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-  color:#000; /* BLACK TEXT */
-  text-decoration:none;
-}
-.card img{
-  width:28px;
-  height:28px;
-}
-.card span{
-  font-size:18px;
-  color:#000; /* BLACK TEXT */
-}
+/* WHITE FLOATING CARDS */
+.card{background:#fff;border-radius:12px;padding:14px 16px;margin:14px 0;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,.08);color:#000;text-decoration:none;display:flex;align-items:center;gap:12px;}
+.card img{width:28px;height:28px;}
 
 /* GRID FOR IMAGES & VIDEOS */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(160px,1fr));
-  gap:12px;
-}
-.grid img{
-  width:100%;
-  border-radius:10px;
-}
-.video-title{
-  font-size:14px;
-  color:#000; /* BLACK TEXT */
-  margin-top:6px;
-}
+.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:12px;}
+.grid .card{flex-direction:column;align-items:center;}
+.grid img{width:100%;border-radius:10px;}
+.video-title{font-size:14px;color:#000;margin-top:6px;}
 </style>
 </head>
 
 <body>
-
 <!-- HOME -->
 <div id="home">
   <div class="logo">
@@ -203,6 +128,10 @@ document.querySelectorAll(".tab").forEach(t=>{
     tab=t.dataset.tab;
     document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
     t.classList.add("active");
+    if(tab==="ai"){
+      location.href="https://gemini.google.com"; // REDIRECT
+      return;
+    }
     search();
   };
 });
@@ -220,10 +149,9 @@ function goHome(){
   homeEl.style.display="flex";
 }
 
-/* HELPER: CREATE A CARD */
 function card(icon,text,url){
   return `<a class="card" href="${url}" target="_blank">
-    <img src="${icon}"><span>${text}</span>
+    ${icon?`<img src="${icon}">`:''}<span>${text}</span>
   </a>`;
 }
 
@@ -232,11 +160,6 @@ function search(){
   if(!q) return;
   const enc=encodeURIComponent(q);
   content.innerHTML="";
-
-  if(tab==="ai"){
-    location.href="https://gemini.google.com";
-    return;
-  }
 
   if(tab==="all"){
     content.innerHTML=
@@ -248,15 +171,12 @@ function search(){
 
   if(tab==="images"){
     fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{
-        "Authorization":"Client-ID "+UNSPLASH,
-        "Accept-Version":"v1"
-      }
+      headers:{"Authorization":"Client-ID "+UNSPLASH}
     })
     .then(r=>r.json())
     .then(d=>{
       content.innerHTML=`<div class="grid">${
-        d.results.map(i=>`<div class="card"><img src="${i.urls.thumb}"><span>Image</span></div>`).join("")
+        d.results.map(i=>`<div class="card"><img src="${i.urls.small}"><span>Image</span></div>`).join("")
       }</div>`;
     });
   }
@@ -266,29 +186,21 @@ function search(){
     .then(r=>r.json())
     .then(d=>{
       content.innerHTML=`<div class="grid">${
-        d.items.map(v=>`
-          <div class="card">
-            <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
-              <img src="${v.snippet.thumbnails.medium.url}">
-              <span>${v.snippet.title}</span>
-            </a>
-          </div>`).join("")
+        d.items.map(v=>`<div class="card"><a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}"><img src="${v.snippet.thumbnails.medium.url}"><span>${v.snippet.title}</span></a></div>`).join("")
       }</div>`;
     });
   }
 
   if(tab==="news"){
     content.innerHTML=
-      card("https://news.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`)+
+      card("https://www.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`)+
       card("https://www.bing.com/favicon.ico","Bing News",`https://www.bing.com/news/search?q=${enc}`);
   }
 
   if(tab==="flights"){
-    content.innerHTML=
-      card("https://www.flightradar24.com/favicon.ico","Flightradar24","https://www.flightradar24.com");
+    content.innerHTML=card(null,"Flightradar24","https://www.flightradar24.com");
   }
 }
 </script>
-
 </body>
 </html>
