--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body{
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
 
 /* RESULTS */
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
+#results{display:none;max-width:1600px;margin:auto;padding:15px;min-height:100vh;}
 .topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
 .back{cursor:pointer;font-size:22px;margin-bottom:8px;}
 .tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
@@ -48,22 +48,20 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
 .card{background:#fff;border-radius:12px;padding:14px 16px;margin:12px 0;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,.08);color:#000;text-decoration:none;display:flex;align-items:center;gap:12px;}
 .card img{width:28px;height:28px;}
 
-/* GRID FOR IMAGES & VIDEOS */
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px;}
-.grid .card{flex-direction:column;align-items:center;overflow:hidden;}
+/* GRID FOR IMAGES & VIDEOS - FULL IMAGES */
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:8px;}
 .grid img{
   width:100%;
   aspect-ratio:16/9;
-  border-radius:12px;
   object-fit:cover;
+  border-radius:8px;
+  display:block;
 }
-.video-title{font-size:14px;color:#000;margin-top:6px;text-align:center;}
 
 /* MOBILE ADJUSTMENTS */
 @media(max-width:480px){
   .search-box{width:95%;}
-  .grid{grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:12px;}
-  .video-title{font-size:12px;}
+  .grid{grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:6px;}
 }
 </style>
 </head>
@@ -187,7 +185,7 @@ function search(){
     .then(r=>r.json())
     .then(d=>{
       content.innerHTML=`<div class="grid">${
-        d.results.map(i=>`<div class="card"><img src="${i.urls.regular}"></div>`).join("")
+        d.results.map(i=>`<img src="${i.urls.regular}">`).join("")
       }</div>`;
     });
   }
@@ -197,7 +195,7 @@ function search(){
     .then(r=>r.json())
     .then(d=>{
       content.innerHTML=`<div class="grid">${
-        d.items.map(v=>`<div class="card"><a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}"><img src="${v.snippet.thumbnails.high.url}"></a></div>`).join("")
+        d.items.map(v=>`<a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank"><img src="${v.snippet.thumbnails.high.url}"></a>`).join("")
       }</div>`;
     });
   }
