--- a/ie.html
+++ b/ie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <head>
-<title>Searchmas (Windows 95 Mode)</title>
+<title>Searchmas - Compatibility Mode</title>
 </head>
 
 <body bgcolor="#F0F0F0" text="#000000">
@@ -24,24 +24,28 @@
 
 <br><br>
 
-<form action="https://duckduckgo.com/" method="get">
-  <input type="text" name="q" size="30">
+<form method="get" action="https://duckduckgo.com/">
+  <input type="text" name="q" size="32">
   <br><br>
-  <input type="submit" value="Search">
+  <input type="submit" value="Search the Web">
 </form>
-
-<br><br>
-
-<font size="2" face="Arial">
-This is Searchmas compatibility mode.<br>
-Designed for Windows 95 & Internet Explorer.<br>
-</font>
 
 <br>
 
-<font size="2">
-<a href="https://duckduckgo.com/">Open DuckDuckGo directly</a>
+<font size="2" face="Arial">
+Compatibility mode for very old browsers.<br>
+If modern Searchmas fails, this still works.
 </font>
+
+<br><br>
+
+<table border="0" cellpadding="6">
+<tr>
+<td><a href="https://www.google.com/">Google</a></td>
+<td><a href="https://www.bing.com/">Bing</a></td>
+<td><a href="https://duckduckgo.com/">DuckDuckGo</a></td>
+</tr>
+</table>
 
 </center>
 
