--- a/ie_all.html
+++ b/ie_all.html
@@ -1,22 +1,32 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
-<body bgcolor="#FFFFFF">
+<body bgcolor="#FFFFFF" background="Santa.png">
 
 <center>
-<br>
+<br><br>
 
-<form method="get" action="https://duckduckgo.com/">
-<input type="text" name="q" size="40">
-<input type="submit" value="Search">
+<form method="get" action="https://www.google.com/search">
+  <input type="text" name="q" size="36">
+  <input type="submit" value="Google Search">
+  <img src="https://www.google.com/favicon.ico" width="16" height="16" border="0" align="middle">
 </form>
 
 <br>
 
-<font size="2">
-Search results powered externally.
-</font>
+<form method="get" action="https://www.bing.com/search">
+  <input type="text" name="q" size="36">
+  <input type="submit" value="Bing Search">
+  <img src="https://www.bing.com/favicon.ico" width="16" height="16" border="0" align="middle">
+</form>
+
+<br>
+
+<form method="get" action="https://search.yahoo.com/search">
+  <input type="text" name="p" size="36">
+  <input type="submit" value="Yahoo! Search">
+  <img src="https://s.yimg.com/rz/l/favicon.ico" width="16" height="16" border="0" align="middle">
+</form>
 
 </center>
-
 </body>
 </html>
