--- a/ie_tabs.html
+++ b/ie_tabs.html
@@ -5,6 +5,7 @@
 <center>
 <br>
 
+<!-- LOGO -->
 <font size="6" face="Arial">
 <font color="#4285F4">S</font>
 <font color="#EA4335">e</font>
@@ -19,11 +20,10 @@
 
 <br><br>
 
-<table border="1" cellpadding="5" cellspacing="0" bgcolor="#FFFFFF">
+<table border="1" cellpadding="4" cellspacing="0" bgcolor="#FFFFFF">
 <tr>
 <td><a href="ie_all.html" target="content">All</a></td>
 <td><a href="ie_images.html" target="content">Images</a></td>
-<td><a href="ie_videos.html" target="content">Videos</a></td>
 <td><a href="ie_news.html" target="content">News</a></td>
 <td><a href="ie_flights.html" target="content">Flights</a></td>
 <td><a href="https://gemini.google.com/" target="_top">AI Mode</a></td>
@@ -31,6 +31,5 @@
 </table>
 
 </center>
-
 </body>
 </html>
